# Polypropylene

./: .gitignore  CMakeLists.txt  LICENSE.MIT  README.md  Todo.txt  lgtm.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: greetings.yml
cmake/: OptionInfo.cmake  Prepend.cmake
docs/wiki/: Building.md  Parsing Custom Types From and to Json.md  Running The Examples.md
examples/: CMakeLists.txt
examples/pizza/: BakedEvent.h  CMakeLists.txt  Pizza.cpp  Pizza.h  Topping.cpp  Topping.h  main.cpp
examples/pizza/toppings/: Champignon.cpp  Champignon.h  Cheese.cpp  Cheese.h  Mozzarella.cpp  Mozzarella.h  TomatoSauce.cpp  TomatoSauce.h
examples/pizzasnippet/: CMakeLists.txt  main.cpp
include/polypropylene/: Polypropylene.h  Prefab.h  TryParser.h
include/polypropylene/definitions/: CXXVersionDetection.h  Definitions.h  OSDetection.h
include/polypropylene/event/: Delegate.h  Event.h  EventHandler.h  EventService.h
include/polypropylene/genericfactory/: GenericFactory.h  GenericFactoryService.h
include/polypropylene/io/: FileTypeChecker.h  Path.h  Settings.h
include/polypropylene/json/: JsonLoader.h  JsonParser.h  JsonUtil.h
include/polypropylene/log/: Assert.h  Errors.h  Log.h
include/polypropylene/memory/: AllocationService.h  Allocator.h  PropertyPool.h
include/polypropylene/memory/allocators/: MallocAllocator.h  PoolAllocator.h
include/polypropylene/prefab/: CompositePrefab.h  Prefab.h
include/polypropylene/property/: Clone.h  Creation.h  Entity.h  EntityManager.h  EntityManagerView.h  EntityPrefab.h  ForwardDeclarations.h  Property.h  PropertyAnnotations.h  PropertyContainerManager.h  PropertyDependencies.h  PropertyFactory.h  PrototypeEntityPrefab.h
include/polypropylene/property/construction/: ContentProvider.h  EntityPrefab.h  PropertyContainerPrefab.h  PropertyFactory.h
include/polypropylene/property/event/: EntityEvent.h  PropertyAttachedEvent.h  PropertyContainerEvent.h  PropertyDetachedEvent.h
include/polypropylene/reflection/: ClassMetadata.h  Field.h  Polymorphic.h  Reflectable.h  TemplateTypeToString.h  Type.h  TypeHandle.h  TypeMap.h  VariableRegister.h
include/polypropylene/resources/: ResourceHandle.h  ResourceLoader.h  Resources.h  Signature.h
include/polypropylene/serialisation/: ClassMetadataSerialiser.h  ContentProvider.h  FieldStorage.h  TryParser.h  TypeConverter.h
include/polypropylene/serialisation/json/: JsonDefaultParsers.h  JsonFieldStorage.h  JsonFieldWriter.h  JsonFieldWriterRegister.h  (+6 more)
include/polypropylene/stdutils/: CollectionUtils.h  StringUtils.h
include/polypropylene/system/: PropertyOwningSystem.h  PropertyPool.h  System.h  SystemManager.h
include/proteus/: Dependency.h  Polypropylene.h  Signature.h  StringUtils.h  StringVariables.h  TryParser.h  proteus.h
include/proteus/event/: EventHandler.h  EventService.h
include/proteus/genericfactory/: GenericFactoryService.h
include/proteus/io/: FileTypeChecker.h  Path.h  Settings.h
include/proteus/json/: JsonLoader.h  JsonParser.h
include/proteus/macros/: CompilerDetection.h  Definitions.h  OSDetection.h
include/proteus/memory/: AllocationService.h  Allocator.h
include/proteus/property/: Property.h  PropertyAnnotations.h  PropertyContainer.h  PropertyContainerManagerView.h  PropertyDependencies.h
include/proteus/reflection/: TemplateTypeToString.h  TypeHandle.h  TypeMap.h  TypeRegister.h
include/proteus/resources/: ResourceHandle.h  ResourceLoader.h  Resources.h
include/proteus/stdutils/: CollectionUtils.h  TuplePrinter.h
res/pizza/: funghi.json  margherita.json
src/: CMakeLists.txt
src/event/: EventService.cpp
src/io/: Path.cpp
src/log/: Log.cpp
src/memory/: AllocationService.cpp  Allocator.cpp  PropertyPool.cpp
src/memory/allocators/: MallocAllocator.cpp  PoolAllocator.cpp
src/polypropylene/: CMakeLists.txt  Signature.cpp  StringUtils.cpp  StringVariables.cpp
src/polypropylene/event/: Event.cpp
src/polypropylene/io/: Path.cpp  Settings.cpp
src/polypropylene/json/: JsonLoader.cpp  JsonParser.cpp  JsonUtil.cpp
src/polypropylene/log/: Log.cpp
src/polypropylene/property/: Entity.cpp  EntityPrefab.cpp  PropertyContainer.cpp
src/polypropylene/property/construction/: ContentProvider.cpp  EntityPrefab.cpp  PropertyContainerPrefab.cpp
src/polypropylene/property/construction/json/: JsonPropertyContent.cpp
src/polypropylene/reflection/: ClassMetadata.cpp  Field.cpp  StringVariables.cpp  TypeHandle.cpp  TypeRegister.cpp  VariableRegister.cpp
src/polypropylene/resources/: ResourceHandle.cpp  ResourceLoader.cpp  Resources.cpp  Signature.cpp
src/polypropylene/serialisation/: ClassMetadataSerialiser.cpp  ContentProvider.cpp
src/polypropylene/serialisation/json/: JsonFieldStorage.cpp  JsonLoader.cpp  JsonParser.cpp  JsonUtil.cpp
src/polypropylene/serialisation/json/property/: JsonFieldStorage.cpp  JsonPropertyContent.cpp
src/polypropylene/stdutils/: StringUtils.cpp
src/property/: Entity.cpp  Prefab.cpp
src/proteus/: CMakeLists.txt  Signature.cpp  StringUtils.cpp  StringVariables.cpp
src/proteus/event/: Event.cpp  EventService.cpp
src/proteus/io/: Path.cpp  Settings.cpp
src/proteus/json/: JsonLoader.cpp  JsonUtil.cpp
src/proteus/log/: Log.cpp
src/proteus/property/: PropertyContainer.cpp
src/proteus/property/construction/: ContentProvider.cpp  PropertyContainerPrefab.cpp
src/proteus/property/construction/json/: JsonPropertyContent.cpp
src/proteus/reflection/: TypeRegister.cpp
src/proteus/resources/: ResourceHandle.cpp  ResourceLoader.cpp  Resources.cpp
src/reflection/: ClassMetadata.cpp  Field.cpp  Type.cpp  TypeHandle.cpp  VariableRegister.cpp
src/serialisation/: ClassMetadataSerialiser.cpp  FieldStorage.cpp
src/serialisation/json/: JsonFieldStorage.cpp  JsonFieldWriterRegister.cpp  JsonLoader.cpp  JsonParser.cpp  JsonTypeConverter.cpp  JsonUtil.cpp
src/stdutils/: StringUtils.cpp
src/system/: System.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  example.cpp  polypropyleneTests.cpp
test/include/: AllocatorTests.h  EntityTests.h  LogTests.h  PaxTest.h
(+20 files in other folders)
